--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,7 @@
     <!-- 書籍管理ページのHTML -->
     <div class="main-wrapper" id="booksPage">
       <!-- <i class="nes-bcrikko is-small"></i> -->
-      <img class="nes-avatar is-rounded is-medium" alt="Gravatar image example" src="https://www.gravatar.com/avatar?s=15"
-        style="image-rendering: pixelated;" id="backTimer">
+      <button id="backTimer" type="button" class="nes-btn">もどる</button>
       <div class="nes-field is-inline">
         <input 
         type="text" 
